--- a/index.html
+++ b/index.html
@@ -18,16 +18,31 @@
         <div class="modal-content hidden">
           <button class="close">✔</button>
           <div class="modal hidden">
-            <span class="close">&times;</span>
-            <p>text here1</p>
+            <span class="modal-title">Modal Window 1</span>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
           </div>
           <div class="modal hidden">
-            <span class="close">&times;</span>
-            <p>text here2</p>
+            <span class="modal-title">Modal Window 2</span>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
           </div>
           <div class="modal hidden">
-            <span class="close">&times;</span>
-            <p>text here3</p>
+            <span class="modal-title">Modal Window 3</span>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
           </div>
         </div>
         <div class="overlay hidden"></div>
